corrected some spacing - particularly in the info section

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ body {
 
 .hero {
   display: flex;
-  /* justify-content: space-between; */
   background-color: #1f2937;
   padding: 20px 15% 8%;
   margin: 0px;
@@ -44,7 +43,6 @@ body {
   font-size: 48px;
   font-weight: 900;
   color: #f9faf8;
-  /* padding: 10px; */
 }
 
 .heroSecondary {
@@ -57,8 +55,12 @@ body {
 .info {
   display: flex;
   flex-direction: column;
-  padding: 40px 15% 5%;
   background-color: #f9faf8;
+}
+
+.infoWhole {
+  margin: 20px 20%;
+  padding: 20px 10%;
 }
 
 .infoHeading {
@@ -68,20 +70,22 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 15% 20px;
 }
 
 .infoImages {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  padding: 20px 15% 8%;
+  justify-content: center;
+  padding: 20px;
+  margin: 20px;
 }
 
 .infoImage {
   display: flex;
+  flex: 0;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0 20px;
 }
 
 .image {
@@ -99,30 +103,31 @@ body {
 .quote {
   display: flex;
   flex-direction: column;
-  padding: 8% 23% 8%;
+  /* padding: 8% 23% 8%; */
   background-color: #e5e7eb;
   color: #1f2937;
+}
+
+.quoteWhole {
+  margin: 50px 20%;
+  padding: 50px; 10%;
 }
 
 .quoteText {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  /* font-family: 'Robota', sans-serif; */
   font-weight: 100;
   font-size: 36px;
   font-style: italic;
-  /* text-align: left; */
 }
 
 .quoteOrigin {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  /* font-family: 'Robota', sans-serif; */
   font-weight: 500;
   font-size: 24px;
-  /* text-align: left; */
 }
 
 .callToAction {
